updates list order response DTO
